# sokol-swift

./: .gitignore  CMakeLists.txt  Package.swift  README.md
.github/workflows/: ci.yml
Examples/: clear.swift
Sources/Sokol/: App.swiftinterface  Audio.swiftinterface  Debugtext.swiftinterface  Gfx.swiftinterface  Gl.swiftinterface  Glue.swiftinterface  Log.swiftinterface  Shape.swiftinterface  Time.swiftinterface
Sources/Sokol/c/: module.modulemap  sokol.h
Sources/sokol/: app.swift  audio.swift  debugtext.swift  gfx.swift  gl.swift  glue.swift  log.swift  shape.swift  time.swift
Sources/sokol/c/: sokol.h
Tests/sokol-swiftTests/: sokol_swiftTests.swift
